--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.4.4",
     "date-utils": "^1.2.21",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
@@ -19,6 +20,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.6",
     "nodemon": "^2.0.16",
     "sequelize": "^6.20.1"
   }
