--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "date-utils": "^1.2.21",
     "debug": "~2.6.9",
     "dotenv": "^16.0.1",
