--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.0",
+    "helmet": "^5.1.0",
+    "helmet-csp": "^3.4.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
